Style read more and donate buttons
Co-authored-by: Anita W <anitawoodruff@users.noreply.github.com>

--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -128,6 +128,10 @@
 				padding: 0px 16px;
 			}
 		}
+		.click-through-action {
+			margin-right: 24px;
+			display: inline-block;
+		}
 	} // ./impact
 	.read-more {
 		float: right;
