--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -29,14 +29,19 @@
 	.btn-primary {
 		background: @primary-button-colour;
 		border-radius: 4px;
+		padding: 8px 24px;
 		font-weight: bold;
+		&:hover {
+			background: white;
+			color: @primary-button-colour;
+		}
 	}
 
 	.btn-outline-primary {
 		color: @primary-button-colour;
 		border-color: @primary-button-colour;
 		border-radius: 4px;
-		padding: 12px 24px;
+		padding: 8px 24px;
 		font-weight: bold;
 		&:hover {
 			background: @primary-button-colour;
