Add bar in search page results box
Co-authored-by: Anita W <anitawoodruff@users.noreply.github.com>

--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -84,6 +84,7 @@
 		align-items: center;
 		justify-content: center;
 		text-align: center;
+		margin-top: 1.25em;
 
 		.charity-logo {
 			width: 100%;
@@ -98,7 +99,6 @@
 		}
 	}
 	.text-summary {
-		padding: 0.5em;
 		.name {
 			margin-right: 0.3em;
 		}
@@ -107,6 +107,7 @@
 		}
 	}
 	.impact {
+		border-left: solid 1px @light-grey;
 		h4 {
 			font-size: 14px;
 			font-weight: bold;
