--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -13,7 +13,7 @@
 //colours from Brian
 @dark-turquoise: #39917F;
 @dark-grey: #414141;
-
+@light-grey: #F0F0F0;
 
 /* Corrado's original palette TODO refactor out, prefer semantic names */
 @colour-01: #F04B47;
