--- a/src/style/main.less
+++ b/src/style/main.less
@@ -96,9 +96,12 @@ body {
 //for consistent border styling across the app
 .std-border {
 	border: 1px solid @grey-border-colour;
-	padding: 1.25em 2em 1.25em 1.25em;
 	border-radius: 4px;
 	box-sizing: border-box;
+}
+
+.std-padding {
+	padding: 1.25em;
 }
 
 .std-box-shadow {
