Style n results found
Co-authored-by: Anita W <anitawoodruff@users.noreply.github.com>

--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -6,18 +6,6 @@
 		margin-top: 50px;
 		padding: 2em;
 
-		.results-list {
-			padding: 2em;
-		}
-
-		.top-tab {
-			// position: absolute;
-			// bottom: 100%;
-			// left: 0;
-			// font-size: 150%;
-			// padding-left: 1.25em;
-		}
-
 		.search-page-description {
 			margin: auto;
 			max-width: 550px; 
@@ -26,7 +14,8 @@
 }
 
 .num-results {
-
+	color: @primary-blue;
+	margin-bottom: 10px;
 }
 
 .unready-results {
@@ -43,10 +32,6 @@
 	margin-right: 0;
 	margin-bottom: 2em;
 	box-shadow: none;
-	/* Extra space for the "recommended" tab */
-	&.impact-high {
-		margin-top: 3em;
-	}
 	
 	.recommended-tab {
 		position: absolute;
