--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -27,24 +27,24 @@
 // 	}
 
 	.btn-primary {
-		background: @primary-button-colour;
+		background: @primary-blue;
 		border-radius: 4px;
 		padding: 8px 24px;
 		font-weight: bold;
 		&:hover {
 			background: white;
-			color: @primary-button-colour;
+			color: @primary-blue;
 		}
 	}
 
 	.btn-outline-primary {
-		color: @primary-button-colour;
-		border-color: @primary-button-colour;
+		color: @primary-blue;
+		border-color: @primary-blue;
 		border-radius: 4px;
 		padding: 8px 24px;
 		font-weight: bold;
 		&:hover {
-			background: @primary-button-colour;
+			background: @primary-blue;
 			color: white;
 		}
 	}
