--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -14,6 +14,7 @@
 @dark-turquoise: #39917F;
 @dark-grey: #414141;
 @light-grey: #F0F0F0;
+@primary-blue: #3E60C6;
 
 /* Corrado's original palette TODO refactor out, prefer semantic names */
 @colour-01: #F04B47;
@@ -52,10 +53,6 @@
 @default-bg: #6e707b;
 @light-fg: white;
 @dark-fg: #414352;
-
-//colours from Brian
-@primary-button-colour: #3E60C6;
-
 
 @default-button-colour: #deb686;
 @darken-default-button-colour: darken(@default-button-colour, 10%);
