--- a/src/style/positioning.less
+++ b/src/style/positioning.less
@@ -1,4 +1,7 @@
 
+// Maximum width for page content according to Brian's figma designs
+@max-content-width: 1120px;
+
 // FIXME Document this!
 
 @navbar-height: 75px;
