update footer to match new designs

--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -14,6 +14,7 @@
 @dark-turquoise: #39917F;
 @dark-grey: #414141;
 @light-grey: #F0F0F0;
+@light-beige: #F8F8F8;
 @primary-blue: #3E60C6;
 
 /* Corrado's original palette TODO refactor out, prefer semantic names */
