expand text column on search page when logo unavailable

--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -92,6 +92,10 @@
 			color: #262741
 		}
 	}
+	.searchpg-flex-grow {
+		flex: 1 0 33.333333%;
+		max-width: 50%;
+	}
 	.impact {
 		border-left: solid 1px @light-grey;
 		h4 {
