--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -8,7 +8,7 @@
 // // Using #mainDiv or .modal-dialog to increase specificity of selectors to beat BS
 #mainDiv, .modal-dialog {
 	
-	.btn { // double BS normal rounding
+	.btn { // double BS normal rounding -- why??
 		border-radius: 8px;
 	}
 	.btn-lg {
@@ -28,7 +28,7 @@
 
 	.btn-primary {
 		background: @primary-blue;
-		border-radius: 4px;
+		border-radius: 4px; // why less rounding than normal??
 		padding: 8px 24px;
 		font-weight: bold;
 		&:hover {
