Display a search widget in the navigation bar

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -28,6 +28,14 @@
 	padding: 15px;
 }
 
+.navbar-search-widget {
+	padding-top: 15px;
+	.sogive-search-box {
+		padding-top: 10px!important;
+		padding-bottom: 10px!important;
+	}
+}
+
 .navbar .navbar-nav .nav-item .nav-link {
 	color: @dark-grey;
 	font-size: 16px;
