--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -20,6 +20,7 @@
 	.input-group>.input-group-prepend:not(:first-child)>.btn {
 		border-top-left-radius: 0;
 		border-bottom-left-radius: 0;
+		border: 1px solid #ced4da; // copy form control's colours
 	}
 
 	.btn-round {
