--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -20,19 +20,13 @@
 	.input-group>.input-group-prepend:not(:first-child)>.btn {
 		border-top-left-radius: 0;
 		border-bottom-left-radius: 0;
-		border: 1px solid #ced4da; // copy form control's colours
+		border: 1px solid #ced4da; // copy form control's colours. Otherwise appends look odd!
 	}
 
 	.btn-round {
 		// Border-radius can't overlap, so it gets clamped to the largest non-overlapping value - giving us semicircular ends
 		border-radius: 100vw;
 	}
-	
-// 	.btn-default {
-// 		background-color: @default-button-colour;
-// 		color: @light-fg;
-// 		border-color: darken(@default-button-colour, 5%);
-// 	}
 
 	.btn-primary {
 		background: @primary-blue;
@@ -76,9 +70,6 @@
 	.btn-group {
 		display: flex;
 		box-shadow: 0px 2px 2px @dropshadow-colour;
-	}
-	.btn-group > .btn-text {
-		// box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 	}
 	.btn-group > .btn:not(:active) { //:first-child:not(:last-child):not(.dropdown-toggle) {
 		// no right shadow
