new website pages

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -67,6 +67,8 @@
 @import "footer.less";
 @import "EventPage.less";
 @import "ShareWidget.less";
+@import "HomePage.less";
+@import "AboutPage.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
