--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -165,19 +165,21 @@
 	}
 }
 
-.gradient {
-	height: 25vh;
-	background: linear-gradient(135deg, #79D579 0%, #005484 100%);
-	margin-right: -15px;
-	margin-left: -15px;
-}
-
-.worldImage {
-	background-image: url('/img/world.png');
-	background-size: cover;
-	background-position: center;
-	margin: auto;
-    height: 100%;
+.SearchPage {
+	.gradient {
+		height: 25vh;
+		background: linear-gradient(135deg, #79D579 0%, #005484 100%);
+		margin-right: -15px;
+		margin-left: -15px;
+	}
+	
+	.worldImage {
+		background-image: url('/img/world.png');
+		background-size: cover;
+		background-position: center;
+		margin: auto;
+		height: 100%;
+	}
 }
 
 .search-pager {
