--- a/src/style/main.less
+++ b/src/style/main.less
@@ -117,3 +117,23 @@ body {
 .std-box-shadow {
 	box-shadow: 0px 3px 6px rgba(81, 81, 81, 0.125);
 }
+
+// Banner shared with Methodology, About Us and Blog Page
+.gradient-banner {
+    height: 25vh;
+    background: linear-gradient(135deg, #79D579 0%, #005484 100%);
+    margin-right: -15px;
+    margin-left: -15px;
+
+    .worldImage {
+        background-image: url('/img/world.png');
+        background-size: cover;
+        background-position: center;
+        margin: auto;
+        height: 100%;
+    
+        h1, h2, p, a {
+            color: white;
+        }
+    }
+}
