--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -3,7 +3,7 @@
 
 .HomePage {
 	.gradient {
-		height: 50vh;
+		height: 55vh;
 		background: linear-gradient(135deg, #79D579 0%, #005484 100%);
 		margin-right: -15px;
 		margin-left: -15px;
@@ -18,6 +18,11 @@
 
         h2, p, a {
             color: white;
+            text-transform: unset !important;
         }
     }
+}
+
+.explore-impact-ratings {
+    background-color: @primary-blue;
 }
