--- a/src/style/main.less
+++ b/src/style/main.less
@@ -120,7 +120,7 @@ body {
 
 // Banner shared with Methodology, About Us and Blog Page
 .gradient-banner {
-    height: 25vh;
+    height: 15vh;
     background: linear-gradient(135deg, #79D579 0%, #005484 100%);
     margin-right: -15px;
     margin-left: -15px;
@@ -132,8 +132,9 @@ body {
         margin: auto;
         height: 100%;
     
-        h1, h2, p, a {
+        h1 {
             color: white;
+			text-transform: unset !important;
         }
     }
 }
