added react-faq-component and contents of HomePage

--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -3,10 +3,10 @@
 
 .HomePage {
 	.gradient {
-		height: 55vh;
+		height: 500px;
 		background: linear-gradient(135deg, #79D579 0%, #005484 100%);
-		margin-right: -15px;
-		margin-left: -15px;
+		margin: 0 -15px;
+		overflow: hidden;
 	}
 	
 	.worldImage {
@@ -25,4 +25,9 @@
 
 .explore-impact-ratings {
     background-color: @primary-blue;
+}
+
+.top-cards {
+	max-height: 380px;
+	max-width: 100%;
 }
