--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -18,16 +18,22 @@
 
         h2, p, a {
             color: white;
-            text-transform: unset !important;
         }
     }
 }
 
-.explore-impact-ratings {
-    background-color: @primary-blue;
+h2 {
+	text-transform: unset !important;
+	color: @green;
+	text-align: center;
 }
 
 .top-cards {
 	max-height: 380px;
 	max-width: 100%;
+}
+
+#method-card, #contact-card {
+	overflow: hidden;
+	margin: 0 -1em;
 }
