--- a/src/style/main.less
+++ b/src/style/main.less
@@ -69,6 +69,7 @@
 @import "ShareWidget.less";
 @import "HomePage.less";
 @import "AboutPage.less";
+@import "WebsiteCards.less"; 
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
