--- a/src/style/main.less
+++ b/src/style/main.less
@@ -139,3 +139,17 @@ body {
         }
     }
 }
+
+.btn-white {
+	background-color: white;
+	text-align: center;
+  border-color: @primary-blue;
+	color: @primary-blue;
+	padding: 1em 1.5em;
+}
+
+.btn-white:hover {
+	background-color: @primary-blue;
+	color: white;
+	border-color: white;
+}
