--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -35,7 +35,7 @@ h2 {
 
 .top-cards {
 	max-height: 380px;
-	max-width: 125%;
+	max-width: 120%;
 }
 
 @media (max-width: 768px) {
@@ -50,11 +50,13 @@ h2 {
 }
 
 // FQA Style
-.faq-body {
-	background-color: unset;
+.faq-row-wrapper {
+	background-color: unset !important;
 }
 
 .faq-row {
+	background-color: white;
+
 	margin: 1em 0;
 	padding: 0 !important;
 	border: 1px solid #757575 !important;
