--- a/src/style/main.less
+++ b/src/style/main.less
@@ -9,6 +9,8 @@
 @import "positioning.less";
 @import "buttons.less";
 
+@import "Faq.less";
+
 .avoid-navbar {
     margin-top: @navbar-height + 1;
 }
@@ -145,7 +147,7 @@ body {
 	text-align: center;
   border-color: @primary-blue;
 	color: @primary-blue;
-	padding: 1em 1.5em;
+	padding: 1em 1.3em;
 }
 
 .btn-white:hover {
