--- a/src/style/main.less
+++ b/src/style/main.less
@@ -142,6 +142,7 @@ body {
     }
 }
 
+// New kind of btn
 .btn-white {
 	background-color: white;
 	text-align: center;
@@ -154,4 +155,10 @@ body {
 	background-color: @primary-blue;
 	color: white;
 	border-color: white;
+}
+
+// BlogPage
+.blog-iframe {
+	width: 100%;
+	height: 80vh;
 }
