--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -44,7 +44,7 @@ h2 {
 	}
 }
 
-#method-card, #contact-card {
+#method-card, #contact-card, #faq-card, #method-card, #text-banner {
 	overflow: hidden;
 	margin: 0 -1em;
 }
