--- a/src/style/main.less
+++ b/src/style/main.less
@@ -18,6 +18,7 @@
 .navbar-brand, .navbar-nav li a {
     line-height: @navbar-height;   // Is this needed? May 2020
     height: @navbar-height;
+	display: block;
 }
 
 /* Override the above so the account/logout menu looks normal */
