--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -18,11 +18,13 @@
 
         h2, p, a {
             color: white;
-						text-align: left;
+			text-align: left;
+			text-shadow: 2px 2px 6px #0659836b;
         }
 
 				p {
 					font-size: 1.2rem;
+					font-weight: bold;
 				}
     }
 }
