--- a/src/style/footer.less
+++ b/src/style/footer.less
@@ -34,7 +34,7 @@ body {
   .footer-toplinks {
     font-size: 16px;
     margin-bottom: 16px;
-    a:first-child {
+    a {
       margin-right: 16px;
     }
   }
