add job ads Analyst

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -73,6 +73,7 @@
 @import "HomePage.less";
 @import "AboutPage.less";
 @import "WebsiteCards.less"; 
+@import "CareersPage.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
