blogpage fullscreen button

--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -5,7 +5,7 @@
 	.gradient {
 		height: 500px;
 		background: linear-gradient(135deg, #79D579 0%, #005484 100%);
-		margin: 0 -15px;
+		// margin: 0 -15px;
 		overflow: hidden;
 	}
 	
@@ -48,5 +48,5 @@ h2 {
 
 #method-card, #contact-card, #faq-card, #method-card, #text-banner {
 	overflow: hidden;
-	margin: 0 -1em;
+	// margin: 0 -1em;
 }
