--- a/src/style/main.less
+++ b/src/style/main.less
@@ -127,8 +127,8 @@ body {
 .gradient-banner {
     height: 15vh;
     background: linear-gradient(135deg, #79D579 0%, #005484 100%);
-    margin-right: -15px;
-    margin-left: -15px;
+    // margin-right: -15px;
+    // margin-left: -15px;
 
     .worldImage {
         background-image: url('/img/world.png');
