added warning about site changing focus to homepage

--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -8,6 +8,24 @@
 		// margin: 0 -15px;
 		overflow: hidden;
 	}
+
+	.warningBanner {
+		background-color: rgb(166, 45, 49);
+		color:white;
+		.container {
+			margin: auto;
+		}
+
+		p {
+			padding-top: 1rem;
+			padding-bottom: 1rem;
+			font-size: 1.2rem;
+			text-align: center;
+			font-weight: bold;
+			vertical-align: middle;
+
+		}
+	}
 	
 	.worldImage {
 		background-image: url('/img/world.png');
