updated colour from feedback & fixed the name - again

--- a/src/style/HomePage.less
+++ b/src/style/HomePage.less
@@ -10,9 +10,9 @@
 	}
 
 	.warningBanner {
-		background-color: rgb(166, 45, 49);
+		background-color: #5ba896;
 		color:white;
-		
+
 		.container {
 			margin: auto;
 		}
