--- a/src/style/main.less
+++ b/src/style/main.less
@@ -75,6 +75,7 @@
 @import "AboutPage.less";
 @import "WebsiteCards.less"; 
 @import "CareersPage.less";
+@import "AnalysisPage.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
