Navbar styling fix

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -17,8 +17,9 @@
 }
 
 .navbar-brand, .navbar-nav li a {
-    line-height: @navbar-height;   // Is this needed? May 2020
+    //line-height: @navbar-height;   // Is this needed? May 2020
     height: @navbar-height;
+	padding-top: 20px;
 	display: block;
 }
 
